--- a/style.css
+++ b/style.css
@@ -87,10 +87,17 @@ p {
     font-size: 16px;
     text-align: center;
     font-family: 'Montserrat';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn:hover {
+    background-color: #1a4031;
 }
 
 ion-icon {
-    font-size: 16px;
+    font-size: 20px;
     margin-right: 10px;
 }
 
